# GroundTruth

./: .env.example  .gitignore  README.md  TESTING.md  index.html  package.json  tailwind.config.js
.github/workflows/: ci.yml
docs/: README.md
docs/arquitectura/: Anexo-1-Diagrama-de-Arquitectura.md  Anexo-2-Flujo-Basico-del-Usuario.md  Anexo-3-Delimitacion-OnChain-OffChain.md  GroundTruth-Arquitectura-MVP-Milestone3.docx  GroundTruth-Arquitectura-Tecnica-MVP.md  contexto-ground2.md
docs/assets/: README.md
docs/diseno/: GroundTruth-Elementos-Graficos-y-Fotografia.md  GroundTruth-Sistema-de-Diseno.md
docs/producto/: GroundTruth-Casos-de-Uso-por-Rol.md  GroundTruth-Gestion-de-Errores.md  GroundTruth-Indice-de-Vistas-y-Navegacion.md  GroundTruth-Modelo-de-Datos.md
groundtruth-api/: .env.example  .mcp.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
groundtruth-api/scripts/: bootstrap-solana.mjs  recargar-tesoreria.mjs
groundtruth-api/src/: app.module.ts  main.ts
groundtruth-program/: .gitignore  Anchor.toml  Cargo.toml  README.md
groundtruth-program/client/: Cargo.toml
groundtruth-program/client/src/: main.rs
groundtruth-program/programs/groundtruth/: Cargo.toml
groundtruth-program/programs/groundtruth/src/: errors.rs  lib.rs  state.rs
groundtruth-web/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
groundtruth-web/src/: main.tsx  (+1 more)
src/: main.jsx
supabase/: README.md
(+289 files in other folders)
