[package]
name = "groundtruth"
version = "0.1.0"
description = "GroundTruth — Pay-per-Proof: tesorería por operador y certificación EUDR"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groundtruth"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Declaradas para que las macros de Anchor no emitan `unexpected cfg`.
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-bubblegum = "2.0.0"
